add error message in testkit dialog

--- a/frontend/javascripts/app/views/experiment/create-testkit-experiment.html
+++ b/frontend/javascripts/app/views/experiment/create-testkit-experiment.html
@@ -1,15 +1,11 @@
 <!--
 Chai PCR - Software platform for Open qPCR and Chai's Real-Time PCR instruments.
 For more information visit http://www.chaibio.com
-
 Copyright 2016 Chai Biotechnologies Inc. <info@chaibio.com>
-
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
-
 http://www.apache.org/licenses/LICENSE-2.0
-
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -283,6 +279,6 @@ limitations under the License.
 	<div class="dialog-footer">
 		<a ng-show="!creating" href="" ng-click="create()" class="button-continue B1B">Continue</a>
 		<a href="" ng-show="creating" class="button-creating  B1B">Creating Experiment<ellipsis-animated/></a>
-		<p ng-show="error">{{error}}</p>		
+		<p ng-show="error" class="SHR error">{{error}}</p>		
 	</div>
 </div>
