--- a/frontend/stylesheets/modal-create-testkit.scss
+++ b/frontend/stylesheets/modal-create-testkit.scss
@@ -50,7 +50,7 @@
 					border-radius: 3px;
 					padding: 3px;
 					width: 25px;
-				}	
+				}
 
 				&:hover{
 					svg{
@@ -59,12 +59,12 @@
 							fill: #fff;
 						}
 					}
-				}			
+				}				
 			}
 		}
 		.dialog-content{
 			padding: 20px;
-			height: calc(100% - 160px);
+			height: calc(100% - 170px);
 
 			.title{
 				margin-left: 60px;
@@ -114,7 +114,7 @@
 		}
 
 		.dialog-footer{
-			height: 80px;
+			height: 90px;
 			border-top: 2px solid #ccc;
 			padding: 20px;
 			text-align: right;
@@ -142,7 +142,10 @@
 				display: inline-block;
 				padding: 8px 50px;
 				text-decoration: none;
-			}			
+			}
+			p.error{
+				color: #e01924;
+			}
 		}
 
 		.checkbox-wrapper{
