--- a/frontend/stylesheets/fonts.css.scss
+++ b/frontend/stylesheets/fonts.css.scss
@@ -249,3 +249,28 @@ H3-Amplification {
   font-family: "dinot-bold";
   font-size: 12px;
 }
+
+//*********** Upgrade Version *********//
+.XH2B {
+  font-family: "dinot-bold";
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.XH3B {
+  font-family: "dinot-bold";
+  font-size: 16.25px;
+  line-height: 24px;
+}
+
+.XH3M {
+  font-family: "dinot-medium";
+  font-size: 16.25px;
+  line-height: 24px;
+}
+
+.XB1 {
+  font-family: "dinot-regular";
+  font-size: 13px;
+  line-height: 16.25px;
+}
