--- a/frontend/javascripts/app/views/directives/experiment-item.html
+++ b/frontend/javascripts/app/views/directives/experiment-item.html
@@ -16,9 +16,11 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
-<div class="B1B">
+<div class="XB1 text-center" ng-if="message == 'Run Experiment'">
   <label class="exp-message" ng-if="message == 'Run Experiment'" ng-class="{'lid-open': lidOpen && message == 'Run Experiment', 'ready-action' : runReady}" ng-click="manageAction()">{{message}}</label>
-  <label class="exp-message started-experiment" ng-if="message != 'Run Experiment'" ng-click="manageAction()" toggle-sidemenu>{{message}}</label>
-  <label class="B2 lid-open-message" ng-if="lidOpen && message == 'Run Experiment'"><br>Lid is open</label>
-  <button ng-show="runReady" id="confirm-start-exp" ng-click="startExp()" ng-class="{'ng-hide': !runReady }" toggle-sidemenu class="B1 success">Confirm</button>
+<!--   <label class="exp-message started-experiment" ng-if="message != 'Run Experiment'" ng-click="manageAction()" toggle-sidemenu>{{message}}</label> -->
+  <label class="XB1 lid-open-message" ng-if="lidOpen && message == 'Run Experiment'">Cannot run, hardware lid is open</label>
+  <label class="exp-message confirm-exp" ng-show="runReady" ng-class="{'ng-hide': !runReady }" toggle-sidemenu class="B1 success">
+    <img src="images/conf_check.svg">Confirm Run Experiment
+  </label>
 </div>
