--- a/frontend/javascripts/app/views/experiment/left-menu.html
+++ b/frontend/javascripts/app/views/experiment/left-menu.html
@@ -20,86 +20,96 @@
   <div class="side-menu-header-container">
     <div class="text-container H3" ui-sref="home">
       <img src="/images/back-home-white.svg">
-      <span style="line-height: 30px;vertical-align: middle;">Back To Home</span>
+      <span class="XH3M" style="vertical-align: middle;">Back To Home</span>
     </div>
     <div class="close-container"><span class="close-side-menu" toggle-sidemenu>
-      <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 5 5"><title>x_k</title><rect x="2.25" y="-0.79" width="0.5" height="6.57" transform="translate(-1.04 2.5) rotate(-45)"/><rect x="-0.79" y="2.25" width="6.57" height="0.5" transform="translate(-1.04 2.5) rotate(-45)"/></svg>
+      <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 5 5"><title>Close</title><rect x="2.25" y="-0.79" width="0.5" height="6.57" transform="translate(-1.04 2.5) rotate(-45)"/><rect x="-0.79" y="2.25" width="6.57" height="0.5" transform="translate(-1.04 2.5) rotate(-45)"/></svg>
     </span></div>
   </div>
 
   <div class="side-menu-content-container">
     <div class="side-menu-name-container">
       <edit-exp-name status="status"></edit-exp-name>
-      <div ng-if="status == 'COMPLETED'" ng-show="exp.time_valid" class="side-menu-exp-status B2">{{runStatus}}{{exp.started_at | amCalendar}}</div>
-      <div ng-if="status == 'COMPLETED'" ng-show="!exp.time_valid" class="side-menu-exp-status B2">Run previously</div>
-      <div ng-if="status != 'COMPLETED'" class="side-menu-exp-status B1">{{runStatus}}</div>
+      <div ng-if="status == 'COMPLETED'" ng-show="exp.time_valid" class="side-menu-exp-status XB1 run-on-status">
+        {{runStatus}} {{exp.started_at}}
+        <label class="side-menu-exp-status-text success XB1" ng-show="experiment.completion_status === 'success'">Completed</label>
+        <label class="side-menu-exp-status-text failed XB1" ng-show="experiment.completion_status !== 'success'">Failed</label>
+      </div>
+      <div ng-if="status == 'COMPLETED'" ng-show="!exp.time_valid" class="side-menu-exp-status XB1 run-on-status">
+        Run previously
+        <label class="side-menu-exp-status-text success" ng-show="experiment.completion_status === 'success'">Completed</label>
+        <label class="side-menu-exp-status-text failed" ng-show="experiment.completion_status !== 'success'">Failed</label>
+      </div>
+      <div ng-if="status != 'COMPLETED'" class="side-menu-exp-status XB1">{{runStatus}}</div>
     </div>
-    <div class="side-menu-menu-container property-menu">
-      <label class="section-name">Setup</label>
+    <div class="side-menu-menu-container run-exp" style="padding: 0">
       <div class="side-menu-menu-item">
-        <div class="B1M" ng-click="showProperties=true">Experiment Properties &nbsp;
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8 9"><title>ArrowR Black</title><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><polygon points="8 4.5 0 0 0 9 8 4.5"/></g></g></svg>          
+        <experiment-item show-prop="showProperties" exp="exp" state-val="{{status}}" lid-open="lidOpen" max-cycle="maxCycle"></experiment-item>
+      </div>
+
+      <div class="side-menu-button-container">
+        <button ng-show="!exporting" class="side-menu-button XB1" ng-click="exportExperiment()" experiment-id="params.id" style="margin-right: 10px;">Export</button>
+        <button ng-show="exporting" class="side-menu-button XB1" style="margin-right: 10px;">Exporting<ellipsis-animated><ellipsis-animated/></button>
+        <button class="side-menu-button XB1 second-button" ng-click="isConfirmDelete = !isConfirmDelete" ng-show="!isConfirmDelete">Delete</button>
+        <button class="side-menu-button XB1 second-button confirm-delete" ng-click="deleteExperiment(params.id)" ng-show="isConfirmDelete">Confirm Delete</button>
+        <span class="text-danger" ng-show="errorExport">Error exporting data. Please try again.</span>
+      </div>
+    </div>
+
+    <div class="side-menu-menu-container property-menu">
+      <label class="section-name XB1">Setup</label>
+      <div class="side-menu-menu-item">
+        <div class="XH3M" ng-click="showProperties=true">Experiment Properties &nbsp;
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8 9"><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><polygon points="8 4.5 0 0 0 9 8 4.5"/></g></g></svg>          
         </div>
       </div>
       <div class="side-menu-menu-item">
-        <div class="B1M" ui-sref="edit-protocol({id: params.id})" toggle-sidemenu>
+        <div class="XH3M" ui-sref="edit-protocol({id: params.id})" toggle-sidemenu>
           <protocol-item state="{{status}}"></protocol-item>
         </div>
       </div>
       <div class="side-menu-menu-item">
-        <div class="B1M" ui-sref="samples-targets({id: params.id})" toggle-sidemenu>
+        <div class="XH3M" ui-sref="samples-targets({id: params.id})" toggle-sidemenu>
           <span>Samples + Targets</span>
         </div>
       </div>
       <div class="side-menu-menu-item">
-        <div class="B1M" ui-sref="plate-layout({id: params.id})" toggle-sidemenu>
+        <div class="XH3M" ui-sref="plate-layout({id: params.id})" toggle-sidemenu>
           <span>Well Layout</span>
         </div>
       </div>
-
-      <div class="side-menu-button-container">
-        <button ng-show="!exporting" class="side-menu-button SH pull-left" ng-click="exportExperiment()" experiment-id="params.id">Export</button>
-        <button ng-show="exporting" class="side-menu-button SH pull-left">Exporting<ellipsis-animated><ellipsis-animated/></button>
-        <button class="side-menu-button SH second-button pull-right" ng-click="deleteExperiment(params.id)">Delete</button>
-        <span class="text-danger" ng-show="errorExport">Error exporting data. Please try again.</span>
-      </div>
-    </div>
-    <div class="side-menu-menu-container top-border run-exp" style="padding: 0">
-      <div class="side-menu-menu-item">
-        <experiment-item show-prop="showProperties" exp="exp" state-val="{{status}}" lid-open="lidOpen" max-cycle="maxCycle"></experiment-item>
-      </div>
     </div>
     <div class="side-menu-menu-container top-border analyze-menu">
-      <label class="section-name">Analyze</label>
+      <label class="section-name XB1">Analyze</label>
       <div class="side-menu-menu-item" ng-class="{'disabled-link': status == 'NOT_STARTED' || !hasAmplification()}">
-        <div class="B1M" ui-sref="run-experiment({id: params.id, chart: 'amplification'})" toggle-sidemenu ng-if="status != 'NOT_STARTED' && hasAmplification()">
+        <div class="XH3M" ui-sref="run-experiment({id: params.id, chart: 'amplification'})" toggle-sidemenu ng-if="status != 'NOT_STARTED' && hasAmplification()">
           <span>Amplification Curve</span>
         </div>
-        <div class="B1M" ng-if="status == 'NOT_STARTED' || !hasAmplification()">
+        <div class="XH3M" ng-if="status == 'NOT_STARTED' || !hasAmplification()">
           <span>Amplification Curve</span>
         </div>
       </div>
       <div class="side-menu-menu-item" ng-class="{'disabled-link': status == 'NOT_STARTED' || !hasStandardCurve()}">
-        <div class="B1M" ui-sref="run-experiment({id: params.id, chart: 'standard-curve'})" toggle-sidemenu ng-if="status != 'NOT_STARTED' && hasStandardCurve()">
+        <div class="XH3M" ui-sref="run-experiment({id: params.id, chart: 'standard-curve'})" toggle-sidemenu ng-if="status != 'NOT_STARTED' && hasStandardCurve()">
           <span>Standard Curve</span>
         </div>
-        <div class="B1M" ng-if="status == 'NOT_STARTED' || !hasStandardCurve()">
+        <div class="XH3M" ng-if="status == 'NOT_STARTED' || !hasStandardCurve()">
           <span>Standard Curve</span>
         </div>
       </div>
       <div class="side-menu-menu-item" ng-class="{'disabled-link': status == 'NOT_STARTED' || !hasMeltCurve()}">
-        <div class="B1M" ui-sref="run-experiment({id: params.id, chart: 'melt-curve'})" toggle-sidemenu ng-if="status != 'NOT_STARTED' && hasMeltCurve()">
+        <div class="XH3M" ui-sref="run-experiment({id: params.id, chart: 'melt-curve'})" toggle-sidemenu ng-if="status != 'NOT_STARTED' && hasMeltCurve()">
           <span>Melt Curve</span>
         </div>
-        <div class="B1M" ng-if="status == 'NOT_STARTED' || !hasMeltCurve()">
+        <div class="XH3M" ng-if="status == 'NOT_STARTED' || !hasMeltCurve()">
           <span>Melt Curve</span>
         </div>        
       </div>
       <div class="side-menu-menu-item" ng-class="{'disabled-link': status == 'NOT_STARTED'}">
-        <div class="B1M" ui-sref="run-experiment({id: params.id, chart: 'temperature-logs'})" toggle-sidemenu ng-if="status != 'NOT_STARTED'">
+        <div class="XH3M" ui-sref="run-experiment({id: params.id, chart: 'temperature-logs'})" toggle-sidemenu ng-if="status != 'NOT_STARTED'">
           <span>Thermal Profile</span>
         </div>
-        <div class="B1M" ng-if="status == 'NOT_STARTED'">
+        <div class="XH3M" ng-if="status == 'NOT_STARTED'">
           <span>Thermal Profile</span>
         </div>        
       </div>
@@ -108,7 +118,7 @@
 
   <div class="side-sub-menu-content-container" ng-show="showProperties">
     <div class="side-menu-header-container">      
-      <div class="close-container"><span class="close-side-menu" ng-click="showProperties=false">
+      <div class="close-container" style="padding-right: 0"><span class="close-side-menu" ng-click="showProperties=false">
         <img src="/images/x_k.svg">
       </span></div>
     </div>
