--- a/frontend/javascripts/app/views/directives/experiment-item.html
+++ b/frontend/javascripts/app/views/directives/experiment-item.html
@@ -20,7 +20,7 @@
   <label class="exp-message" ng-if="message == 'Run Experiment'" ng-class="{'lid-open': lidOpen && message == 'Run Experiment', 'ready-action' : runReady}" ng-click="manageAction()">{{message}}</label>
 <!--   <label class="exp-message started-experiment" ng-if="message != 'Run Experiment'" ng-click="manageAction()" toggle-sidemenu>{{message}}</label> -->
   <label class="XB1 lid-open-message" ng-if="lidOpen && message == 'Run Experiment'">Cannot run, hardware lid is open</label>
-  <label class="exp-message confirm-exp" ng-show="runReady" ng-class="{'ng-hide': !runReady }" toggle-sidemenu class="B1 success">
+  <label class="exp-message confirm-exp" ng-show="runReady" ng-class="{'ng-hide': !runReady }" toggle-sidemenu class="B1 success"  ng-click="startExp()">
     <img src="images/conf_check.svg">Confirm Run Experiment
   </label>
 </div>
