update nav sidebar

--- a/frontend/javascripts/app/views/experiment/experiment-properties-name.html
+++ b/frontend/javascripts/app/views/experiment/experiment-properties-name.html
@@ -28,11 +28,11 @@
         focus-on="editExpNameMode" id="exp_name_field" rows="3"></textarea>
     </div>
 
-    <div class="text-center message-container">
+<!--     <div class="text-center message-container">
       <span  ng-show="successName" class="help-block XB1">
         <span class="text-success">{{successName}}</span>
       </span>
-    </div>
+    </div> -->
     <div ng-show="errors">
       <span class="help-block XB1">
         <span class="text-danger">{{errors}}</span>
