--- a/frontend/stylesheets/directives/menu-overlay.css.scss
+++ b/frontend/stylesheets/directives/menu-overlay.css.scss
@@ -68,6 +68,8 @@ $sidemenu_width: 360px;
           background: #00AEEF;
           margin-left: -10px;
           padding-left: 10px;
+          margin-right: -10px;
+          width: auto;
           svg{
             & > g{
               fill: #fff;
