--- a/frontend/javascripts/app/views/experiment/left-menu.html
+++ b/frontend/javascripts/app/views/experiment/left-menu.html
@@ -44,7 +44,7 @@
     </div>
     <div class="side-menu-menu-container run-exp" style="padding: 0">
       <div class="side-menu-menu-item">
-        <experiment-item show-prop="showProperties" exp="exp" state-val="{{status}}" lid-open="lidOpen" max-cycle="maxCycle"></experiment-item>
+        <experiment-item show-prop="showProperties" exp="exp" state-val="{{status}}" lid-open="lidOpen" is-idle="isIdle" max-cycle="maxCycle"></experiment-item>
       </div>
 
       <div class="side-menu-button-container">
