fix exp name box in nav bar

--- a/frontend/javascripts/app/views/experiment/experiment-properties-name.html
+++ b/frontend/javascripts/app/views/experiment/experiment-properties-name.html
@@ -25,7 +25,7 @@
   </div>
   <form name="expForm">
     <div class="exp-name-container">
-      <p class="exp-name XH2B" ng-show="!editExpNameMode">{{experiment.name}}</p>
+      <p class="exp-name XH2B" ng-class="{'hide-elem': editExpNameMode}" id="exp_name_plat">{{experiment.name}}</p>
       <textarea class="exp-name XH2B" required ng-model="experiment.name" ng-show="editExpNameMode"
         focus-on="editExpNameMode" id="exp_name_field" rows="3" ng-change="adjustTextHeight()"></textarea>
     </div>
